syntax = "proto3";

package calculator;

message AddRequest{
	int32 a = 1;
	int32 b = 2;
}

message AddResponse{
	int32 result = 1;
}

message PrimeNoDecompRequest{
	int32 number = 1;
}

message PrimeNoDecompResponse{
	int32 factor = 1;
}

message AverageRequest{
	int32 input = 1;
}

message AverageResponse{
	double average = 1;
}

message FindMaxRequest{
	int32 inputNumber = 1;
}

message FindMaxResponse{
	int32 max = 1;
}

message SqrtRequest{
	int32 square = 1;
}

message SqrtResponse{
	double square_root = 1;
}

service CalculatorService{
	rpc	Add(AddRequest) returns (AddResponse) {}
	rpc PrimeNoDecomp(PrimeNoDecompRequest) returns (stream PrimeNoDecompResponse) {}
	rpc ComputeAverage(stream AverageRequest) returns (AverageResponse) {}
	rpc FindMaximum(stream FindMaxRequest) returns (stream FindMaxResponse) {}

	rpc Sqrt(SqrtRequest) returns (SqrtResponse) {}
}