syntax = "proto3";

package greet;

message Greeting{
	string first_name = 1;
	string last_name = 2;
}

message GreetingRequest{
	Greeting greeting = 1;
}

message GreetingResponse{
	string result = 1;
}

message GreetManyRequest{
	Greeting greeting = 1;
}

message GreetManyResponse{
	string result = 1;
}

message LongGreetRequest{
	Greeting greeting = 1;
}

message LongGreetResponse{
	string result = 1;
}

message GreetEveryOneRequest{
	Greeting greeting = 1;
}

message GreetEveryOneResponse{
	string result = 1;
}

message GreetDeadlineRequest{
	Greeting greeting = 1;
}

message GreetDeadlineResponse{
	string result = 1;
}

service GreetingService {
	rpc Greet(GreetingRequest) returns (GreetingResponse) {}
	rpc GreetMany(GreetManyRequest) returns (stream GreetManyResponse) {}
	rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse) {}
	rpc GreetEveryOne(stream GreetEveryOneRequest) returns (stream GreetEveryOneResponse) {}

	rpc GreetWithDeadline(GreetDeadlineRequest) returns (GreetDeadlineResponse) {}
}